Fixed
Fixed some files that got messed up when deleting the last repository

--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@
 }
 
 .actualUpload {
-	width: 29.95vw;
+	width: 29.9vw;
 }
 
 .actualUpload:hover {
